toolchain/compiler/msp430-gcc-9.2.0.50-source-full/gcc/gcc/testsuite/g++.dg/parse/crash55.C
// PR c++/42038
// { dg-require-effective-target exceptions_enabled }

extern int __cxa_begin_catch;	// { dg-error "declared incorrectly" }

void f(void)
{
  try { } catch (int) { }
}
